@@ -1,18 +1,18 @@
 DIST jpeg-6b-patches-1.4.tar.bz2 22476 RMD160 b8c5cc7383b07028c7b973305437c89d5bf66aea SHA1 535b1ca416d83efcb33084161cdedf388452599b SHA256 6f0d17a38bf582728f9e35cdeb48ce76a8c2ef8983fa4cea646afb4f4770d70a
 DIST jpeg-6b-patches-1.6.tar.bz2 22573 RMD160 21290e71c116d8e543737ffd5e26b96f34e30f93 SHA1 b66629ad0380a318442be5b5b4ba945bf98035ff SHA256 23a07581f336a1e8c33f0efdb4b3ef728fe278459811b3b89258f8525dbbbcca
 DIST jpegsrc.v6b.tar.gz 613261 RMD160 18892206014fbb8cae2a44e281f4ed53feaf7882 SHA1 7079f0d6c42fad0cfba382cf6ad322add1ace8f9 SHA256 75c3ec241e9996504fe02a9ed4d12f16b74ade713972f3db9e65ce95cd27e35d
-EBUILD jpeg-6b-r7.ebuild 1247 RMD160 26140fd02e87b73cace0e8392042524be36c2f65 SHA1 d51b413242e104c33bd482d7507e33f4376edf2e SHA256 7bfdffaf65348fd2c76f985608fe553f1d590bf02d808f584f8523436e2e42ca
-MD5 62c719b70c7aaabe00a805ab9d1c43e8 jpeg-6b-r7.ebuild 1247
-RMD160 26140fd02e87b73cace0e8392042524be36c2f65 jpeg-6b-r7.ebuild 1247
-SHA256 7bfdffaf65348fd2c76f985608fe553f1d590bf02d808f584f8523436e2e42ca jpeg-6b-r7.ebuild 1247
-EBUILD jpeg-6b-r8.ebuild 1275 RMD160 c6be6694049db4448050d5a9ce490494b290dea7 SHA1 fbf76cfb83273f4fbf2394d56406b67821c86766 SHA256 284ab047ca2cc4af08895c5e33c66288b3758b8caf6e4e1c1df5adeebbaa8ed7
-MD5 ac5a59ba1948b6ea1d076002d079eff1 jpeg-6b-r8.ebuild 1275
-RMD160 c6be6694049db4448050d5a9ce490494b290dea7 jpeg-6b-r8.ebuild 1275
-SHA256 284ab047ca2cc4af08895c5e33c66288b3758b8caf6e4e1c1df5adeebbaa8ed7 jpeg-6b-r8.ebuild 1275
-MISC ChangeLog 7390 RMD160 373d5ae360835c15e6051b06f3a66fc779322afc SHA1 585d505a44f3d681b7af73650aec06fbc531a512 SHA256 9e02cbfc475d56f3eacba3944de9e69106d69f8f5a780c6125f5fd5430388eef
-MD5 470911af5985174821938b0414522e13 ChangeLog 7390
-RMD160 373d5ae360835c15e6051b06f3a66fc779322afc ChangeLog 7390
-SHA256 9e02cbfc475d56f3eacba3944de9e69106d69f8f5a780c6125f5fd5430388eef ChangeLog 7390
+EBUILD jpeg-6b-r7.ebuild 1249 RMD160 10e797777e7e17b3214e02a7bcd16bbed2242260 SHA1 5412b24f030d10f4fb2ce215d018053f188a0c26 SHA256 d94f910380fa537332d37cd8e38814379c20234f1bb87125df0fc9b7302e3c6e
+MD5 4a4ef75d6bc9f11d268de879b59de620 jpeg-6b-r7.ebuild 1249
+RMD160 10e797777e7e17b3214e02a7bcd16bbed2242260 jpeg-6b-r7.ebuild 1249
+SHA256 d94f910380fa537332d37cd8e38814379c20234f1bb87125df0fc9b7302e3c6e jpeg-6b-r7.ebuild 1249
+EBUILD jpeg-6b-r8.ebuild 1276 RMD160 6f8068348bb0c6d3351129b1c9c0ca5388e387a9 SHA1 a00cefd93826df569ad768ee2607a14579923290 SHA256 86eeb84d155140f9dc1c0c26ee07839a418dad0944755358fa366e79f02b1ed4
+MD5 7a5fd75bbaf5db67057dbbd45b72386c jpeg-6b-r8.ebuild 1276
+RMD160 6f8068348bb0c6d3351129b1c9c0ca5388e387a9 jpeg-6b-r8.ebuild 1276
+SHA256 86eeb84d155140f9dc1c0c26ee07839a418dad0944755358fa366e79f02b1ed4 jpeg-6b-r8.ebuild 1276
+MISC ChangeLog 7530 RMD160 c77e8e1af6dfc483b9e6f0dac8ace7930668abf0 SHA1 44734b2b2a2b64d33621eac23be0203e4265e5b5 SHA256 d9c4400735ccb00e4061e51297734de24bde92fb14a00ce21031c907b1967061
+MD5 c9fdbde7fe3e18f412ddc08f7212356b ChangeLog 7530
+RMD160 c77e8e1af6dfc483b9e6f0dac8ace7930668abf0 ChangeLog 7530
+SHA256 d9c4400735ccb00e4061e51297734de24bde92fb14a00ce21031c907b1967061 ChangeLog 7530
 MISC metadata.xml 224 RMD160 3a7dcbadaed2b7ed12e11152fe1fe2de0193fc29 SHA1 fa5078079869e963f3f51f80124cecf8ea6c1b67 SHA256 806818bba7ae36d62f16c1fe548a1eb2a360caf2d984aa8f47bba7b91ff73434
 MD5 3637cbaea842b04f1aa4693a1f68e286 metadata.xml 224
 RMD160 3a7dcbadaed2b7ed12e11152fe1fe2de0193fc29 metadata.xml 224
