@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/jpeg
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.57 2007/02/09 06:43:06 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.58 2007/02/15 09:43:44 grobian Exp $
+
+  15 Feb 2007; Fabian Groffen <grobian@gentoo.org> jpeg-6b-r7.ebuild,
+  jpeg-6b-r8.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
 *jpeg-6b-r8 (09 Feb 2007)
 
